--- a/src/main/resources/templates/contacts/list.html
+++ b/src/main/resources/templates/contacts/list.html
@@ -18,7 +18,7 @@
         <div class="box-header with-border">
             <h3 class="box-title">Listagem</h3>
             <div class="box-tools pull-right">
-                <a th:href="@{/dashboard/contact/new}" type="button" class="btn btn-box-tool"><i class="fa fa-plus"></i>Ajouter Contact</a>
+                <a th:href="@{/dashboard/contact/new}" type="button" class="btn btn-primary btn-box-tool"><i class="fa fa-plus"></i>Ajouter Contact</a>
                 <br clear="all" />
             </div>
         </div>
