--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,18 +24,11 @@
                     <!-- User image -->
                     <li class="accountUser-header">
                         <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-
-                        <p>
-                            Bruno Brasil - Diretor
-                        </p>
                     </li>
                     <!-- Menu Footer-->
                     <li class="accountUser-footer">
-                        <div class="pull-left">
-                            <a href="#" class="btn btn-default btn-flat">Minha Conta</a>
-                        </div>
                         <div class="pull-right">
-                            <a href="/logout" class="btn btn-default btn-flat">Sair</a>
+                            <a href="/logout" class="btn btn-default btn-flat">Se deconnecter</a>
                         </div>
                     </li>
                 </ul>
