--- a/src/main/resources/templates/contacts/show.html
+++ b/src/main/resources/templates/contacts/show.html
@@ -13,7 +13,8 @@
         <div class="box-header with-border">
             <h3 class="box-title">Contact</h3>
             <div class="box-tools pull-right">
-                <a class="btn btn-primary btn-box-tool" th:href="@{/dashboard/contact/new}" type="button"><i class="fa fa-plus"></i>Ajouter Contact</a>
+                <a role="button" class="btn btn-danger" th:href="@{'/dashboard/exporter/' + ${contact.id} + '/new'} ">Exporter en PDF</a>
+                <a class="btn btn-primary" th:href="@{/dashboard/contact/new}" type="button">Ajouter Contact</a>
                 <br clear="all" />
             </div>
         </div>
@@ -33,16 +34,11 @@
                     <td th:text="${contact.telephone}"></td>
                     <td th:text="${contact.categorie}"></td>
                 </tr>
-                <tr>
-                    <td>
-                        <a role="button" class="btn btn-primary" th:href="@{'/dashboard/rendez-vous/' + ${contact.id} + '/new'}">Prendre un rendez vous</a>
-                        <a role="button" class="btn btn-success" th:href="@{'/dashboard/commande/' + ${contact.id} + '/new'} ">Prendre une commande</a>
-                        <a role="button" class="btn btn-danger" th:href="@{'/dashboard/exporter/' + ${contact.id} + '/new'} ">Exporter en PDF</a>
-                    </td>
-                </tr>
             </table>
         </div>
+    </div>
 
+    <div class="box">
         <div class="box-header with-border">
             <h3 class="box-title">Mes Rendez Vous</h3>
             <div class="box-tools pull-right">
@@ -56,18 +52,20 @@
                     <th>Date Rendez Vous</th>
                     <th>Note Rendez Vous</th>
                 </tr>
-                <tr th:each="rendezvous : ${rendezvousList}">
+                <tr th:each="rendezvous : ${rendezVousList}">
                     <td th:text="${rendezvous.dateRendezVous}"></td>
                     <td th:text="${rendezvous.noteRendezVous}"></td>
                     <td>
                         <a role="button" class="btn btn-primary" th:href="@{'/dashboard/rendez-vous/' + ${rendezvous.id} + '/show'}">Voir</a>
-                        <a role="button" class="btn btn-success" th:href="@{'/dashboard/rendez-vous/' + ${rendezvous.id} + '/update'}">Modifier</a> -
+                        <a role="button" class="btn btn-success" th:href="@{'/dashboard/rendez-vous/' + ${rendezvous.id} + '/update'}">Modifier</a>
                         <a role="button" class="btn btn-danger" th:href="@{'/dashboard/rendez-vous/' + ${rendezvous.id} + '/delete'}">Supprimer</a>
                     </td>
                 </tr>
             </table>
         </div>
+    </div>
 
+    <div class="box">
         <div class="box-header with-border">
             <h3 class="box-title">Mes Commandes</h3>
             <div class="box-tools pull-right">
@@ -82,16 +80,16 @@
                     <th>Note Commande</th>
                 </tr>
                 <tr th:each="commande : ${commandeList}">
-                    <td th:text="${commande.dateRendezVous}"></td>
+                    <td th:text="${commande.id}"></td>
+                    <td th:text="${commande.noteCommande}"></td>
                     <td>
                         <a role="button" class="btn btn-primary" th:href="@{'/dashboard/commande/' + ${commande.id} + '/show'}">Voir</a>
-                        <a role="button" class="btn btn-success" th:href="@{'/dashboard/commande/' + ${commande.id} + '/update'}">Modifier</a> -
+                        <a role="button" class="btn btn-success" th:href="@{'/dashboard/commande/' + ${commande.id} + '/update'}">Modifier</a>
                         <a role="button" class="btn btn-danger" th:href="@{'/dashboard/commande/' + ${commande.id} + '/delete'}">Supprimer</a>
                     </td>
                 </tr>
             </table>
         </div>
-
     </div>
 </section>
 
