--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section layout:fragment="content">
-    Dashboard Test Imako CRM
+    <p>Dashboard Test Imako CRM</p>
 </section>
 </body>
 </html>
