--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -78,7 +78,7 @@
     </div>
     <!-- /.content-wrapper -->
     <footer class="main-footer">
-        <strong>Copyright &copy; 2016 Spring Boot - AdminLte2.</strong>
+        <strong>Copyright &copy; 2018 Imako CRM - AdminLte2.</strong>
     </footer>
 </div>
 <!-- ./wrapper -->
