Fix bug #Affichage

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!-- Logo -->
-<a href="index2.html" class="logo">
+<a href="#" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>S</b>AL</span>
     <!-- logo for regular state and mobile devices -->
@@ -17,14 +17,9 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown accountUser accountUser-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="dist/img/user2-160x160.jpg" class="accountUser-image" alt="User Image" />
                     <span class="hidden-xs">Bruno Brasil</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <!-- User image -->
-                    <li class="accountUser-header">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-                    </li>
                     <!-- Menu Footer-->
                     <li class="accountUser-footer">
                         <div class="pull-right">
