Add feature #Pdf Reporting

--- a/src/main/resources/templates/contacts/show.html
+++ b/src/main/resources/templates/contacts/show.html
@@ -13,7 +13,7 @@
         <div class="box-header with-border">
             <h3 class="box-title">Contact</h3>
             <div class="box-tools pull-right">
-                <a role="button" class="btn btn-danger" th:href="@{'/dashboard/exporter/' + ${contact.id} + '/new'} ">Exporter en PDF</a>
+                <a target="_blank" role="button" class="btn btn-danger" th:href="@{'/dashboard/exporter/' + ${contact.id} + '/new'} ">Exporter en PDF</a>
                 <a class="btn btn-primary" th:href="@{/dashboard/contact/new}" type="button">Ajouter Contact</a>
                 <br clear="all" />
             </div>
